objects/Account_Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>X2015__c</fullName>
        <formula>X2015_Q1__c +  X2015_Q2__c +  X2015_Q3__c +  X2015_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Best__c</fullName>
        <formula>Q1_2016_Best__c +  Q2_2016_Best__c +  Q3_2016_Best__c +   Q4_2016_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Land_Change__c</fullName>
        <formula>X2016_Land__c - Previous_Week__r.X2016_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Land Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Land__c</fullName>
        <formula>Q1_2016_Land__c +  Q2_2016_Land__c +  Q3_2016_Land__c +  Q4_2016_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Low__c</fullName>
        <formula>Q1_2016_Low__c +  Q2_2016_Low__c +  Q3_2016_Low__c +  Q4_2016_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Q4_Land_Change__c</fullName>
        <formula>Q4_2016_Land__c - Previous_Week__r.Q4_2016_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Q4 Land Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Quota__c</fullName>
        <formula>Q2_Quota__c + Q1_Week__r.Quota__c + Q3_Week__r.Quota__c + Q4_Week__r.Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Risk__c</fullName>
        <formula>X2016_Target__c - X2016_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Target__c</fullName>
        <formula>Q1_2016_Best__c +  Q2_2016_Best__c +  Q3_2016_Best__c +  Q4_2016_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Upside__c</fullName>
        <formula>X2016_Best__c - X2016_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Best__c</fullName>
        <formula>Q1_2017_Best__c + Q2_2017_Best__c + Q3_2017_Best__c + Q4_2017_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Change_Land__c</fullName>
        <formula>X2017_Land__c  -  Previous_Week__r.X2017_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Change Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Land__c</fullName>
        <formula>Q1_2017_Land__c + Q2_2017_Land__c + Q3_2017_Land__c + Q4_2017_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Low__c</fullName>
        <formula>Q1_2017_Low__c + Q2_2017_Low__c + Q3_2017_Low__c + Q4_2017_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Q4_Change_Land__c</fullName>
        <formula>Q4_2017_Land__c -  Previous_Week__r.Q4_2017_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Q4 Change Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_Target__c</fullName>
        <formula>Q1_2017_Target1__c + Q2_2017_Target1__c + Q3_2017_Target1__c + Q4_2017_Target1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2017 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Best__c</fullName>
        <formula>Q1_2018_Best__c + Q2_2018_Best__c + Q3_2018_Best__c + Q4_2018_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2018 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Land_Change__c</fullName>
        <formula>X2019_Forecast__c  - Previous_Week__r.Previous_Week__r.X2019_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2018 Land Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Land__c</fullName>
        <formula>Q1_2018_Land__c + Q2_2018_Land__c + Q3_2018_Land__c + Q4_2018_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2018 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Low__c</fullName>
        <formula>Q1_2018_Low__c + Q2_2018_Low__c + Q3_2018_Low__c + Q4_2018_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2018 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Target__c</fullName>
        <formula>Q1_2018_Best__c + Q2_2018_Best__c + Q3_2018_Best__c + Q4_2018_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2018 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2019_Forecast__c</fullName>
        <formula>Q1_2019_Forecast__c + Q2_2019_Forecast__c + Q3_2019_Forecast__c + Q4_2019_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2019 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2019_Risk__c</fullName>
        <formula>Q1_2019_Risk__c + Q2_2019_Risk__c + Q3_2019_Risk__c +Q4_2019_Risk__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2019 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2019_Upside__c</fullName>
        <formula>Q1_2019_Upside__c + Q2_2019_Upside__c + Q3_2019_Upside__c + Q4_2019_Upside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2019 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2020_Forecast__c</fullName>
        <formula>Q1_2020_Forecast__c + Q2_2020_Forecast__c + Q3_2020_Forecast__c + Q4_2020_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2020 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2020_Risk__c</fullName>
        <formula>Q1_2020_Risk__c + Q2_2020_Risk__c + Q3_2020_Risk__c +Q4_2020_Risk__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2020 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2020_Upside__c</fullName>
        <formula>Q1_2020_Upside__c + Q2_2020_Upside__c + Q3_2020_Upside__c + Q4_2020_Upside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2020 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Revenue Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Revenue__c</columns>
        <columns>Commit__c</columns>
        <columns>Land__c</columns>
        <columns>Best__c</columns>
        <columns>Week_Date__c</columns>
        <columns>Total_Best__c</columns>
        <columns>Total_Land__c</columns>
        <columns>Total_Low__c</columns>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>LOB_O__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Previous_Week__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Aparna_test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Cloud_Forecast_Quarter__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>LOB__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>American Express Travel Related Services</value>
        </filters>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureEngage</value>
        </filters>
        <label>Aparna test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CGI</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Week_Date__c</columns>
        <columns>Cloud_Forecast_Quarter__c</columns>
        <columns>LOB__c</columns>
        <columns>Previous_Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>CGI</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>CGI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Outbound</fullName>
        <columns>Cloud_Forecast_Quarter__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Previous_Week__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CSM_Owner__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>LOB__c</columns>
        <columns>LOB_Formula__c</columns>
        <columns>LOB_O__c</columns>
        <columns>LOB1__c</columns>
        <columns>Cloud_Platform_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Q3_2018_Land__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>contains</operation>
            <value>PureEngage</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>AAA Washington (PureEngage Only ) (M</value>
        </filters>
        <filters>
            <field>Cloud_Forecast_Quarter__c</field>
            <operation>contains</operation>
            <value>7/8/2019</value>
        </filters>
        <label>PureEngage</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ARF-{000000}</displayFormat>
        <label>Account Revenue Forecasts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Revenue Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>